@@ -7,9 +7,3 @@ OS = $(shell uname)
 CFLAGS += -I$(HOME)/local-$(HOSTNAME)/include
 CXXFLAGS += -I$(HOME)/local-$(HOSTNAME)/include
 LDFLAGS += -L$(HOME)/local-$(HOSTNAME)/lib
-
-ifeq ($(OS), Darwin)
-  CFLAGS += -I/sw/include
-  CXXFLAGS += -I/sw/include
-  LDFLAGS += -L/sw/lib
-endif
