@@ -1,3 +1,10 @@
+2008-09-14 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.popt/*: added
+	* packages/build.gpsim/Makefile: use glibtoolize on Mac OS X
+	* packages/build.ncurses/Makefile: use Xcode2.5 on Mac OS X
+	* packages/packages.mk: remove /sw/* include and lib search path
+
 2008-08-24 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.cpan/Makefile: ask perl for the version number
